; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_cs.c_wined3d_cs_emit_set_transform.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_cs.c_wined3d_cs_emit_set_transform.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wined3d_cs = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 (%struct.wined3d_cs*, i32)*, %struct.wined3d_cs_set_transform* (%struct.wined3d_cs*, i32, i32)* }
%struct.wined3d_cs_set_transform = type { i32, %struct.wined3d_matrix, i32 }
%struct.wined3d_matrix = type { i32 }

@WINED3D_CS_QUEUE_DEFAULT = common dso_local global i32 0, align 4
@WINED3D_CS_OP_SET_TRANSFORM = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @wined3d_cs_emit_set_transform(%struct.wined3d_cs* %0, i32 %1, %struct.wined3d_matrix* %2) #0 {
  %4 = alloca %struct.wined3d_cs*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.wined3d_matrix*, align 8
  %7 = alloca %struct.wined3d_cs_set_transform*, align 8
  store %struct.wined3d_cs* %0, %struct.wined3d_cs** %4, align 8
  store i32 %1, i32* %5, align 4
  store %struct.wined3d_matrix* %2, %struct.wined3d_matrix** %6, align 8
  %8 = load %struct.wined3d_cs*, %struct.wined3d_cs** %4, align 8
  %9 = getelementptr inbounds %struct.wined3d_cs, %struct.wined3d_cs* %8, i32 0, i32 0
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 1
  %12 = load %struct.wined3d_cs_set_transform* (%struct.wined3d_cs*, i32, i32)*, %struct.wined3d_cs_set_transform* (%struct.wined3d_cs*, i32, i32)** %11, align 8
  %13 = load %struct.wined3d_cs*, %struct.wined3d_cs** %4, align 8
  %14 = load i32, i32* @WINED3D_CS_QUEUE_DEFAULT, align 4
  %15 = call %struct.wined3d_cs_set_transform* %12(%struct.wined3d_cs* %13, i32 12, i32 %14)
  store %struct.wined3d_cs_set_transform* %15, %struct.wined3d_cs_set_transform** %7, align 8
  %16 = load i32, i32* @WINED3D_CS_OP_SET_TRANSFORM, align 4
  %17 = load %struct.wined3d_cs_set_transform*, %struct.wined3d_cs_set_transform** %7, align 8
  %18 = getelementptr inbounds %struct.wined3d_cs_set_transform, %struct.wined3d_cs_set_transform* %17, i32 0, i32 2
  store i32 %16, i32* %18, align 4
  %19 = load i32, i32* %5, align 4
  %20 = load %struct.wined3d_cs_set_transform*, %struct.wined3d_cs_set_transform** %7, align 8
  %21 = getelementptr inbounds %struct.wined3d_cs_set_transform, %struct.wined3d_cs_set_transform* %20, i32 0, i32 0
  store i32 %19, i32* %21, align 4
  %22 = load %struct.wined3d_cs_set_transform*, %struct.wined3d_cs_set_transform** %7, align 8
  %23 = getelementptr inbounds %struct.wined3d_cs_set_transform, %struct.wined3d_cs_set_transform* %22, i32 0, i32 1
  %24 = load %struct.wined3d_matrix*, %struct.wined3d_matrix** %6, align 8
  %25 = bitcast %struct.wined3d_matrix* %23 to i8*
  %26 = bitcast %struct.wined3d_matrix* %24 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %25, i8* align 4 %26, i64 4, i1 false)
  %27 = load %struct.wined3d_cs*, %struct.wined3d_cs** %4, align 8
  %28 = getelementptr inbounds %struct.wined3d_cs, %struct.wined3d_cs* %27, i32 0, i32 0
  %29 = load %struct.TYPE_2__*, %struct.TYPE_2__** %28, align 8
  %30 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %29, i32 0, i32 0
  %31 = load i32 (%struct.wined3d_cs*, i32)*, i32 (%struct.wined3d_cs*, i32)** %30, align 8
  %32 = load %struct.wined3d_cs*, %struct.wined3d_cs** %4, align 8
  %33 = load i32, i32* @WINED3D_CS_QUEUE_DEFAULT, align 4
  %34 = call i32 %31(%struct.wined3d_cs* %32, i32 %33)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
